# pyproject-template

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: logging.py
tests/: conftest.py  test_logging.py
