[project]
name = "pyproject-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["loguru>=0.7.3", "python-dotenv>=1.0.1"]

[project.optional-dependencies]
dev = ["pytest>=8.3.1", "ruff>=0.1.6"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py312"
line-length = 100
lint.select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"
